After long and agonysing fight looks like I've sorted out the database and GUI thread hell. Few more improvements pending (e.g. header row for the admin sales list itmes and maybe something else).

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.example.selfcheckout_wof">
 
     <application
+        android:name=".custom_components.utils.SalesItemsCache"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
