--- a/gradle.properties
+++ b/gradle.properties
@@ -18,3 +18,4 @@ android.useAndroidX=true
 # Automatically convert third-party libraries to use AndroidX
 android.enableJetifier=true
 
+PAYPAL_HERE_PUBLISH_VERSION=2.1.02.19063010
