Changed buttons to cardviews in the admin section. Introduced DB export functionality (doesn't yet work properly - only in simulator).

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,4 +52,6 @@ dependencies {
     annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
 
     api("com.paypal.retail:here-sdk-debug:$PAYPAL_HERE_PUBLISH_VERSION@aar") { transitive = true }
+
+    implementation 'com.opencsv:opencsv:4.1'
 }
