--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,8 @@ android {
 }
 
 dependencies {
+    implementation files('libs/btsdk.jar')
+    implementation files('libs/zixng.jar')
     def room_version = "2.2.0-beta01"
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
