--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,9 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.BLUETOOTH" />
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
+    <!--uses-permission android:name="android.permission.READ_PHONE_STATE" /-->
 
     <application
         android:name=".custom_components.utils.SalesItemsCache"
@@ -32,8 +35,10 @@
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/title_activity_sales"
             android:theme="@style/SelfCheckoutFullscreen">
-
         </activity>
+        <activity
+            android:name=".btprinter_zj.DeviceListActivity"
+            android:label="@string/title_activity_device_list"></activity>
     </application>
 
 </manifest>
