Adding Self Checkout Charge Activity - the form where we will be taking payment - for now mostly just a copy of PPH Charge activity. A few more nullpointer exception fixes.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -58,6 +58,12 @@
         <activity
             android:name=".PPH.ui.ChargeActivity"
             android:label="@string/title_activity_charge"
+            android:configChanges="orientation|screenSize|keyboardHidden"
+            android:theme="@style/SelfCheckoutFullscreen">
+        </activity>
+        <activity
+            android:name=".PPH.ui.SelfCheckoutChargeActivity"
+            android:label="@string/title_activity_charge"
             android:configChanges="orientation|screenSize|keyboardHidden">
         </activity>
         <activity
