--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,6 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.BLUETOOTH" />
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
-    <!--uses-permission android:name="android.permission.READ_PHONE_STATE" /-->
 
     <application
         android:name=".custom_components.utils.SalesItemsCache"
@@ -23,79 +22,66 @@
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
             android:name=".DataAdminActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".SalesActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/title_activity_sales"
-            android:theme="@style/SelfCheckoutFullscreen">
-        </activity>
+            android:theme="@style/SelfCheckoutFullscreen"></activity>
         <activity
             android:name=".btprinter_zj.DeviceListActivity"
-            android:label="@string/title_activity_device_list"></activity>
-
-        <!-- PPH Activities -->
+            android:label="@string/title_activity_device_list" /> <!-- PPH Activities -->
         <activity
             android:name=".PPH.ui.MainActivity"
-            android:label="@string/app_name"
-            android:configChanges="orientation|screenSize|keyboardHidden">
-        </activity>
+            android:configChanges="orientation|screenSize|keyboardHidden"
+            android:label="@string/app_name"></activity>
         <activity
             android:name=".PPH.login.PPHLoginActivity"
-            android:configChanges="orientation|screenSize|keyboardHidden">
-        </activity>
+            android:configChanges="orientation|screenSize|keyboardHidden"></activity>
         <activity
             android:name=".PPH.ui.ReaderConnectionActivity"
-            android:label="@string/title_activity_reader_connection"
-            android:configChanges="orientation|screenSize|keyboardHidden">
-        </activity>
+            android:configChanges="orientation|screenSize|keyboardHidden"
+            android:label="@string/title_activity_reader_connection"></activity>
         <activity
             android:name=".PPH.ui.ChargeActivity"
-            android:label="@string/title_activity_charge"
             android:configChanges="orientation|screenSize|keyboardHidden"
-            android:theme="@style/SelfCheckoutFullscreen">
-        </activity>
-        <activity
-            android:name=".PPH.ui.SelfCheckoutChargeActivity"
             android:label="@string/title_activity_charge"
-            android:configChanges="orientation|screenSize|keyboardHidden">
-        </activity>
+            android:theme="@style/SelfCheckoutFullscreen"></activity>
+        <activity
+            android:name=".SelfCheckoutChargeActivity"
+            android:configChanges="orientation|screenSize|keyboardHidden"
+            android:label="@string/title_activity_charge"></activity>
         <activity
             android:name=".PPH.ui.RefundActivity"
-            android:label="@string/title_activity_charge"
-            android:configChanges="orientation|screenSize|keyboardHidden">
-        </activity>
+            android:configChanges="orientation|screenSize|keyboardHidden"
+            android:label="@string/title_activity_charge"></activity>
         <activity
             android:name=".PPH.ui.AuthCaptureActivity"
-            android:label="AuthCaptureActivity"
-            android:configChanges="orientation|screenSize|keyboardHidden">
-        </activity>
+            android:configChanges="orientation|screenSize|keyboardHidden"
+            android:label="AuthCaptureActivity"></activity>
         <activity
             android:name=".PPH.ui.CaptureActivity"
+            android:configChanges="orientation|screenSize|keyboardHidden"
             android:label="CaptureActivity"
-            android:windowSoftInputMode="stateVisible"
-            android:configChanges="orientation|screenSize|keyboardHidden">
-        </activity>
-        <activity android:name=".PPH.ui.PaymentOptionsActivity"
-            android:configChanges="orientation|screenSize|keyboardHidden">
-        </activity>
-        <activity android:name=".PPH.ui.OfflinePayActivity"
-            android:configChanges="orientation|screenSize|keyboardHidden">
-        </activity>
-        <activity android:name=".PPH.ui.OfflinePaySuccessActivity"></activity>
+            android:windowSoftInputMode="stateVisible"></activity>
+        <activity
+            android:name=".PPH.ui.PaymentOptionsActivity"
+            android:configChanges="orientation|screenSize|keyboardHidden"></activity>
+        <activity
+            android:name=".PPH.ui.OfflinePayActivity"
+            android:configChanges="orientation|screenSize|keyboardHidden"></activity>
+        <activity android:name=".PPH.ui.OfflinePaySuccessActivity" />
         <activity
             android:name=".PPH.ui.VaultActivity"
-            android:label="@string/title_activity_vault"
-            android:configChanges="orientation|screenSize|keyboardHidden">
-        </activity>
-
-
+            android:configChanges="orientation|screenSize|keyboardHidden"
+            android:label="@string/title_activity_vault"></activity>
     </application>
 
 </manifest>
