Implemented ZJ BT printer MAC address storage and lookup in the DB. Not tested yet.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
 
     <application
-        android:name=".custom_components.utils.SalesItemsCache"
+        android:name=".custom_components.utils.CheckOutDBCache"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
