--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,6 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 29
-    buildToolsVersion "29.0.0"
     defaultConfig {
         applicationId "com.example.selfcheckout_wof"
         minSdkVersion 23
@@ -37,6 +36,8 @@ dependencies {
     // Bluetooth receipt printer connectivity.
     implementation files('libs/btsdk.jar')
     implementation files('libs/zixng.jar')
+    implementation 'com.google.firebase:firebase-crashlytics:17.2.1'
+    implementation 'com.google.firebase:firebase-analytics:17.5.0'
     def room_version = "2.2.0-beta01"
 
     // Default dependencies
@@ -100,8 +101,5 @@ dependencies {
     implementation 'androidx.coordinatorlayout:coordinatorlayout:1.0.0'
 
 
-    implementation('com.crashlytics.sdk.android:crashlytics:2.9.0@aar') {
-        transitive = true
-    }
     implementation 'com.eclipsesource.j2v8:j2v8:4.6.0@aar'
 }
